--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "20"
+  },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "next": "14.0.4",
