--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "cacheDirectories": [".next/cache"]
+
 }
