--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": "20"
+    "node": ">=18"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
