--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": ">=18"
+    "node": "20.9.0"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "postcss": "^8",
+    "postcss-import": "^15.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,8 +27,6 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
