--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "react": "^18",
     "react-dom": "^18",
     "postcss": "^8",
-    "postcss-import": "^15.1.0"
+    "postcss-import": "^15.1.0",
+    "autoprefixer": "^10.0.1",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/video-react": "^0.15.5",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
   "cacheDirectories": [".next/cache"]
