--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.0"
-  },
-  "devDependencies": {
+    "sharp": "^0.33.0",
     "tailwindcss": "^3.3.0",
     "@types/react": "^18",
     "@types/node": "^20",
