--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "next": "14.0.4",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/video-react": "^0.15.5",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "next": "^14.2.4",
+    "postcss": "^8",
+    "postcss-import": "^15.1.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.0",
     "tailwindcss": "^3.3.0",
-    "@types/react": "^18",
-    "@types/node": "^20",
-    "@types/react-dom": "^18",
-    "@types/video-react": "^0.15.5",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "typescript": "^5",
-    "postcss": "^8",
-    "postcss-import": "^15.1.0",
-    "autoprefixer": "^10.0.1"
+    "typescript": "^5"
   },
   "cacheDirectories": [
     ".next/cache"
