--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/video-react": "^0.15.5",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
